plugins {
    id 'java'
    id 'io.quarkus'
}

repositories {
    mavenLocal()
    mavenCentral()


}

dependencies {
    implementation 'io.quarkus:quarkus-config-yaml'
    implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
    implementation 'io.quarkus:quarkus-hibernate-validator'
    implementation 'io.quarkus:quarkus-smallrye-openapi'
    implementation 'io.quarkiverse.quinoa:quarkus-quinoa:2.6.2'
    implementation 'io.quarkus:quarkus-hibernate-orm-panache'
    implementation 'io.quarkus:quarkus-rest'
    implementation 'io.quarkus:quarkus-rest-jackson'
    implementation 'io.quarkus:quarkus-arc'
    implementation 'io.quarkus:quarkus-hibernate-orm'
    implementation 'io.quarkus:quarkus-jdbc-h2'
    implementation 'io.quarkus:quarkus-jdbc-postgresql'
    implementation 'io.quarkus:quarkus-flyway'
    implementation 'io.quarkus:quarkus-quartz'
    implementation 'org.hibernate.orm:hibernate-spatial:7.1.4.Final'
    implementation 'com.microsoft.playwright:playwright:1.54.0'
    implementation 'org.mapstruct:mapstruct:1.6.3'
    implementation 'jakarta.data:jakarta.data-api'
    implementation 'org.apache.commons:commons-collections4:4.5.0'
    implementation 'io.quarkus:quarkus-smallrye-context-propagation'
    implementation 'io.hypersistence:hypersistence-utils-hibernate-71:3.12.0'
    compileOnly "org.projectlombok:lombok:1.18.40"

    annotationProcessor enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    annotationProcessor 'org.hibernate.orm:hibernate-processor'
	annotationProcessor "org.projectlombok:lombok:1.18.40"
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
	
	testCompileOnly "org.projectlombok:lombok:1.18.40"
	testAnnotationProcessor "org.projectlombok:lombok:1.18.40"
    testImplementation 'io.quarkus:quarkus-junit5'
    testImplementation 'io.rest-assured:rest-assured'
    testImplementation 'io.quarkus:quarkus-junit5-mockito'
}

group = 'io.equalink'
version = '1.0.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_24
    targetCompatibility = JavaVersion.VERSION_24
}

configurations {
    mockitoAgent
}

test {
    systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
    jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
}

compileJava {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'
}

compileTestJava {
    options.encoding = 'UTF-8'
}

tasks.quarkusDev {
    jvmArgs += ["--add-opens", "java.base/java.lang=ALL-UNNAMED"]
}

tasks.register('runPlaywright', JavaExec) {
    group = "Execution"
    description = "Run Playwright with JavaExecTask"
    classpath = configurations.runtimeClasspath
    mainClass = "com.microsoft.playwright.CLI"
    args = ["codegen"]
}
